--- a/Minitest_week1_exercise_2.html
+++ b/Minitest_week1_exercise_2.html
@@ -2,9 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title> Minitest week 1 </title>
+
 </head>
 <body>
+<h1> Bài 2 - tạo máy tính </h1>
+<form>
+    <input type="number" id="number1" step="1" inputmode="numerric" placeholder="nhập 1 số nguyên">
+    <br>
+    <br>
+    <input type="number" id="number2" step="1" inputmode="numerric" placeholder="nhập 1 số nguyên">
+
+    <table>
+        <tr>
+            <td>
+                <button type="button" class="button" id="addition">+</button>
+                <button type="button" class="button" id="subtract">-</button>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <button type="button" class="button" id="multiple">X</button>
+                <button type="button" class="button" id="division">/</button>
+            </td>
+        </tr>
+    </table>
+    <br>
+    <p id="result"></p>
+
+</form>
+<script src="calculator.js"></script>
 
 </body>
 </html>
